Walkscore on mobile Iphone and Android. https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/539

--- a/wp-content/themes/wp-reddoor/static/styles/src/content.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/content.less
@@ -1595,9 +1595,6 @@ input[type="checkbox"].styled-checkbox-radio:checked + label::before, input[type
     border-bottom: 1px solid #dedede;
     position: relative;
     z-index: 9;
-    .ie11-attr-position {
-      float: left;
-    }
     .title{
       margin-bottom: 15px;
       & > span{
@@ -1896,6 +1893,11 @@ input[type="checkbox"].styled-checkbox-radio:checked + label::before, input[type
       margin-bottom: 20px;
       height: 420px;
       background: url('../images/src/ajax-loader.gif') no-repeat scroll center center;
+      .tab-pane{
+        frame{
+          background: #fff none repeat scroll 0 0;
+        }
+      }
     }
   }
   .propertyDetails{
