--- a/wp-content/themes/wp-reddoor/static/styles/src/style.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/style.less
@@ -466,7 +466,7 @@
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .ie11-attr-position{
     margin-top: 15px;
-
+    float: left;
   }
   .searchForm{
     .select2-search__field{
@@ -482,6 +482,9 @@
 /* Only for Safari */
 @media screen and ( -webkit-min-device-pixel-ratio : 0 )	 {
   .class {
+    .ie11-attr-position{
+      float: left;
+    }
     .searchForm{
       .select2-search__field{
         height: 30px;
